--- a/tasks/homebrew.yml
+++ b/tasks/homebrew.yml
@@ -33,6 +33,7 @@
       - pyenv
       - poetry
       - dockutil
+      - tmux
       - zsh-syntax-highlighting
       - zsh-autosuggestions
       - zsh-completions
