--- a/tasks/setup-vscode.yml
+++ b/tasks/setup-vscode.yml
@@ -12,6 +12,7 @@
       - HashiCorp.terraform
       - sourcery.sourcery
       - loiane.angular-extension-pack
+      - vscodevim.vim
   vars_files:
     - ../vars.yml
   tasks:
