added fig, lens, kubetx

--- a/tasks/homebrew.yml
+++ b/tasks/homebrew.yml
@@ -24,9 +24,12 @@
       - alfred
       - discord
       - figma
+      - lens
+      - fig
 
     homebrew_packages:
       - kubectl
+      - kubectx
       - terraform
       - node
       - tilt
