--- a/tasks/homebrew.yml
+++ b/tasks/homebrew.yml
@@ -41,6 +41,7 @@
       - poetry
       - dockutil
       - tmux
+      - graphviz
       - zsh-syntax-highlighting
       - zsh-autosuggestions
       - zsh-completions
