added more m1 items

--- a/tasks/homebrew.yml
+++ b/tasks/homebrew.yml
@@ -43,6 +43,8 @@
       - dockutil
       - tmux
       - graphviz
+      - freetds
+      - openssl
       - zsh-syntax-highlighting
       - zsh-autosuggestions
       - zsh-completions
