--- a/vars.yml
+++ b/vars.yml
@@ -1,4 +1,4 @@
 ---
-email_address: firstname_lastname@torqata.com
+email_address: firstname_lastname@email.com
 git_username: firstname lastname
 username: computer_username
